2008-06-25 Samuel Abels <http://debain.org>

	* all-over: Rename Tasks.Task to Tasks.TaskSpec. Rename TaskInstance to
	Task. Huge amount of cleanups, better variables names, etc.
	* Tasks/Simple.py: New.

2008-06-22 Samuel Abels <http://debain.org>

	* all-over: Major cleanups/redesign, got gid of a lot of useless code.

2007-09-09 Samuel Abels <http://debain.org>

	* Workflow/Job.py: Added is_completed(), get_waiting_tasks() and
	execute_task_from_id().

2007-09-03 Samuel Abels <http://debain.org>

	* tests/*: Changed tests and directory structure to support testing data
	patterns. Added a test for the Block Data, Task To Task, Block Task To
	Sub-Workflow Decomposition, and Sub-Workflow Decomposition to Block Task
	patterns.
	* Tasks/Task.py, Storage/XmlReader: Support local task data in the form of
	properties (Task Data pattern).

2007-09-02 Samuel Abels <http://debain.org>

	* *.py, Tasks/SubWorkflow.py: Support dynamic loading of sub-workflows. This
	also supports the Recursion pattern.
	* *.py: Support the assignment of attributes in the XML documents.
	* Tasks/Cancel.py: Support Explicit Termination.
	* Tasks/Trigger.py: Support Persistent Trigger.

2007-09-01 Samuel Abels <http://debain.org>

	* tests: Support Interleaved Routing.
	* BranchNode.py, Tasks/*.py: Fixed several bugs related to task cancellation.
	* Tasks/CancelTask.py: Implemented the Cancel Task and Cancel Region
	patterns.
	* Tasks/CancelJob.py: Implemented the Cancel Case pattern.
	* Tasks/Join.py: Support the Cancel Multiple Instance Task and Complete
	Multiple Instance Task patterns.
	* all-over: Use task names instead of task references to address a task, in
	order to relax the strict ordering in which tasks needed to be instanciated.

2007-08-31 Samuel Abels <http://debain.org>

	* Activities are now "Tasks", to be consistent with WorkflowPatterns
	terminology.
	* Tasks/Choose.py, Tasks/MultiChoice.py: Add support for the
	Deferred Choice pattern.