@@ -74,7 +74,7 @@ Mailing List: http://groups.google.com/group/spiff-devel/
 
 Dependencies
 -------------
-(none)
+SpiffSignal
 
 
 Usage
