@@ -14,9 +14,9 @@
 # License along with this library; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
 import Tasks
-from mutex     import mutex
-from Trackable import Trackable
-from Task      import Task
+from mutex       import mutex
+from SpiffSignal import Trackable
+from Task        import Task
 
 class Job(Trackable):
     """
