@@ -13,7 +13,7 @@
 # You should have received a copy of the GNU Lesser General Public
 # License along with this library; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
-from SpiffWorkflow.Trackable import Trackable
+from SpiffSignal             import Trackable
 from SpiffWorkflow.Task      import Task
 from SpiffWorkflow.Exception import WorkflowException
 from SpiffWorkflow.Operators import valueof
